--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-preset-es2015": "^6.22.0",
     "grunt": "~0.4.5",
-    "grunt-babel": "^6.0.0",
     "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-qunit": "~0.5.2",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
-    "load-grunt-tasks": "^3.5.2",
-    "rollup": "^0.41.4"
+    "grunt-rollup": "^1.0.1",
+    "rollup-plugin-babel": "^2.7.1",
+    "babel-preset-es2015": "^6.22.0",
+    "load-grunt-tasks": "^3.5.2"
+  },
+  "dependencies": {
+    "systemjs": "^0.20.5"
   }
 }
