--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-rollup": "^1.0.1",
-    "rollup-plugin-babel": "^2.7.1",
+    "load-grunt-tasks": "^3.5.2",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
-    "load-grunt-tasks": "^3.5.2"
+    "rollup-plugin-babel": "^2.7.1"
   },
   "dependencies": {
     "systemjs": "^0.20.5"
