--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "d3": "^4.6.0",
+    "d3-selection-multi": "^1.0.1",
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-connect": "^1.0.2",
@@ -18,9 +22,8 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-rollup": "^1.0.1",
     "load-grunt-tasks": "^3.5.2",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "rollup-plugin-babel": "^2.7.1"
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-node-resolve": "^2.0.0"
   },
   "dependencies": {
     "systemjs": "^0.20.5"
